# Prac2023

./: README.md
zadanie3/: CMakeLists.txt  README.md  main  main.cpp  test
zadanie3/lib/: Factory.hpp  Function.cpp  Function.hpp  Root.cpp  Root.hpp
zadanie3/lib/test/: Factory_test.cpp  Functions_test.cpp  Operations_test.cpp  Root_test.cpp
zadanie4/: CMakeLists.txt  README.md  main  main.cpp  main.hpp  rsch
zadanie4/research/: research.cpp  research.csv  research.ipynb  series_0_run_0_sol.txt  series_0_run_0_sol_after100.txt  series_0_run_1_sol.txt  series_0_run_1_sol_after100.txt  series_0_run_2_sol.txt  series_0_run_2_sol_after100.txt  series_0_run_3_sol.txt  series_0_run_3_sol_after100.txt  series_0_run_4_sol.txt  series_0_run_4_sol_after100.txt  series_0_run_5_sol.txt  series_0_run_5_sol_after100.txt  series_0_run_6_sol.txt  series_0_run_6_sol_after100.txt  series_0_run_7_sol.txt  series_0_run_7_sol_after100.txt  series_0_run_8_sol.txt  series_0_run_8_sol_after100.txt  series_0_run_9_sol.txt  series_0_run_9_sol_after100.txt  series_1_run_0_sol.txt  series_1_run_0_sol_after100.txt  series_1_run_1_sol.txt  series_1_run_1_sol_after100.txt  series_1_run_2_sol.txt  series_1_run_2_sol_after100.txt  series_1_run_3_sol.txt  series_1_run_3_sol_after100.txt  series_1_run_4_sol.txt  series_1_run_4_sol_after100.txt  series_1_run_5_sol.txt  series_1_run_5_sol_after100.txt  series_1_run_6_sol.txt  series_1_run_6_sol_after100.txt  series_1_run_7_sol.txt  series_1_run_7_sol_after100.txt  series_1_run_8_sol.txt  (+163 more)
zadanie4/src/: crossing.cpp  ga.cpp  life_engine.hpp  lims.hpp  mutation.cpp  selection.cpp  survival.cpp
